cambios sitios twitch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Test desde Ubuntu</title>
 </head>
 <body>
-    <p>Hola, este es tu sitio web.</p>    
+    <p>Hola, este es tu sitio web, la informacion se va a subir a Github.</p>    
 </body>
 </html>
